a4_candy_projects/project_detail: fix dropdown styles & tablist z-index

--- a/adhocracy-plus/assets/scss/components/_dropdown.scss
+++ b/adhocracy-plus/assets/scss/components/_dropdown.scss
@@ -29,6 +29,7 @@
         &:focus {
             text-decoration: none;
             background-color: $bg-tertiary;
+            color: $text-color;
         }
 
         i {
